--- a/res/layout/about_layout.xml
+++ b/res/layout/about_layout.xml
@@ -36,7 +36,7 @@
          android:textSize="20sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="BlackSCREENpREsENtAtIONremote" />
+         android:text="BlackSCREENremote" />
        <TextView
          android:id="@+id/textView17"
          android:layout_width="wrap_content"
@@ -121,7 +121,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:autoLink="web"
-         android:text="Github source:\n" />
+         android:text="Github source:\n https://github.com/Cherubin7th/BlackSCREENpREsENtAtIONremote" />
 
      
         
